feat: pest, larastan and pint

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/sail": "^1.27",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.8",
+        "pestphp/pest": "^2.32",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
