--- a/.github/workflows/pest-tests.yml
+++ b/.github/workflows/pest-tests.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         php-version: 8.3
 
-    - name: Install PHP dependencies
-      run: composer update --${{ matrix.dependency_version }} --no-interaction --no-progress --ansi --with="symfony/console:~${{ matrix.symfony }}"
+    - name: Install dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
     - name: Set up Laravel environment
       run: cp .env.testing .env
