--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Autista.Live
+APP_NAME="Autista Live"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://autista.live
+APP_URL=http://127.0.0.1
+FRONTEND_URL=http://127.0.0.1:3000
+SESSION_DOMAIN=.127.0.0.1
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -19,7 +22,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
