workflow: copy right environment

--- a/.github/workflows/pest-tests.yml
+++ b/.github/workflows/pest-tests.yml
@@ -13,12 +13,11 @@ jobs:
       mariadb:
         image: mariadb:10
         env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: laravel
+          MARIADB_ROOT_PASSWORD: password
+          MARIADB_DATABASE: laravel
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -32,7 +31,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
       - name: Set up Laravel environment
-        run: cp .env.example .env
+        run: cp .env.ci .env
 
       - name: Generate application key
         run: php artisan key:generate
