--- a/.env.ci
+++ b/.env.ci
@@ -12,8 +12,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mariadb
-DB_PORT=3306
+DB_HOST=localhost
+DB_PORT=33306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=password
