workflow: fix typo in .env

--- a/.github/workflows/pest-tests.yml
+++ b/.github/workflows/pest-tests.yml
@@ -13,8 +13,9 @@ jobs:
       mariadb:
         image: mariadb:10
         env:
-          MARIADB_ROOT_PASSWORD: password
-          MARIADB_DATABASE: laravel
+          MYSQL_ROOT_PASSWORD:
+          MYSQL_DATABASE: laravel
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
           - 33306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
