--- a/.env.ci
+++ b/.env.ci
@@ -12,11 +12,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=33306
-DB_DATABASE=127.0.0.1
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
