--- a/.env.ci
+++ b/.env.ci
@@ -14,7 +14,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=33306
-DB_DATABASE=laravel
+DB_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=
 
